--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,5 +11,5 @@
 - include: replication_master.yml
   when: mysql_replication and mysql_replication_role == "Master"
 
-- include: replication_slave.yml
-  when: mysql_replication and mysql_replication_role == "Slave"
+# - include: replication_slave.yml
+#   when: mysql_replication and mysql_replication_role == "Slave"
