--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,3 @@
 mariadb_repo: "deb [arch=amd64,i386,ppc64el] http://mariadb.kisiek.net/repo/10.1/ubuntu xenial main"
-mariadb_key: "keyserver.ubuntu.com"
-mariadb_key_id: "0xcbcb082a1bb943db"
+mariadb_key_server: "hkp://keyserver.ubuntu.com:80"
+mariadb_key_id: "F1656F24C74CD1D8"
