--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,3 +8,4 @@ mysql_max_allowed_packet: "32M"
 mysql_key_buffer_size: 16M
 mysql_query_cache_limit: 1M
 mysql_query_cache_size: 16M
+mariadb_repo: "deb [arch=amd64,i386] http://nyc2.mirrors.digitalocean.com/mariadb/repo/10.2/ubuntu {{ ansible_lsb.codename }} main"
