--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,4 @@ mysql_key_buffer_size: 16M
 mysql_query_cache_limit: 1M
 mysql_query_cache_size: 16M
 mariadb_repo: "deb [arch=amd64,arm64,ppc64el] http://mariadb.mirror.liquidtelecom.com/repo/10.5/ubuntu {{ ansible_lsb.codename }} main"
+mysql_variant: "MariaDB"
