--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,6 +24,7 @@
   pip:
     name: PyMySQL
     state: present
+    executable: pip3
   when:
     - ansible_os_family == "Debian"
     - ansible_lsb.id == "Ubuntu"
