--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 mysql_ssh: False
 mysql_bind_address: 127.0.0.1
+mysql_port: 3306
 mysql_server_id: 1
 mysql_log_basename: master001
 mysql_replication: false
