--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,3 +9,4 @@ mysql_max_allowed_packet: "32M"
 mysql_key_buffer_size: 16M
 mariadb_repo: "deb [arch=amd64,arm64,ppc64el] https://mirror.nextlayer.at/mariadb/repo/11.3/ubuntu {{ ansible_lsb.codename }} main"
 mysql_variant: "MariaDB"
+mysql_service: "mariadb"
