--- a/tasks/mariadb_redhat.yml
+++ b/tasks/mariadb_redhat.yml
@@ -17,8 +17,12 @@
   notify: Restart mysql
 - meta: flush_handlers
 
-- name: Start mariadb
+- name: Set service type
+  set_fact:
+    mysql_service: mariadb
+
+- name: Start mysql
   service:
-    name: mariadb
+    name: "{{ mysql_service }}"
     state: started
     enabled: yes
